--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@
     min-height: 100vh;
     font-family: var(--font-body);
     line-height: 1.6;
-    color: #000000;
-    background: #ffffff;
+    color: #f6f8fc;
+    background: #030711;
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
   }
